--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <div class="card p-0 shadow-sm bg-white rounded">
                   <img src="./assets/arrail.jpeg" class="card-img-top" alt="..." style="height: 150px;">
                   <div class="card-body">
-                    <h5 class="card-title">Arrail do Cabo</h5>
+                    <h5 class="card-title">Arraial do Cabo</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                       card's content.</p>
                     <a href="#" class="btn btn-primary">Comprar</a>
