--- a/index.html
+++ b/index.html
@@ -4,14 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Swiper -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
-  <!-- JQuery -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <!-- CSS -->
   <link rel="stylesheet" href="style.css">
   <title>Rota Única Viagens</title>
@@ -22,11 +19,11 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Rota Única Viagens</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="col-md-3lapse" data-bs-target="#navbarSupportedContent"
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="col-md-3lapse navbar-col-md-3lapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -51,88 +48,70 @@
       </div>
     </nav>
   </header>
-  <!-- Cards -->
-  <div class="container mt-5" id="container">
-    <div id="carouselExample" class="carousel slide">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <div id="excursions">
-            <div class="row">
-              <!-- first card -->
-              <div class="col-md-3">
-                <div class="card p-0 shadow-sm bg-white rounded">
-                  <img src="./assets/angra.jpeg" class="card-img-top" alt="..." style="height: 150px;">
-                  <div class="card-body">
-                    <h5 class="card-title">Angra dos Reis</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                      card's content.</p>
-                    <a href="#" class="btn btn-primary">Comprar</a>
-                  </div>
-                </div>
-              </div>
-              <!-- second card -->
-              <div class="col-md-3">
-                <div class="card p-0 shadow-sm bg-white rounded">
-                  <img src="./assets/arrail.jpeg" class="card-img-top" alt="..." style="height: 150px;">
-                  <div class="card-body">
-                    <h5 class="card-title">Arraial do Cabo</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                      card's content.</p>
-                    <a href="#" class="btn btn-primary">Comprar</a>
-                  </div>
-                </div>
-              </div>
-              <!-- third card -->
-              <div class="col-md-3">
-                <div class="card p-0 shadow-sm bg-white rounded">
-                  <img src="./assets/cabo.jpeg" class="card-img-top" alt="..." style="height: 150px;">
-                  <div class="card-body">
-                    <h5 class="card-title">Cabo Frio</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                      card's content.</p>
-                    <a href="#" class="btn btn-primary">Comprar</a>
-                  </div>
-                </div>
-              </div>
-              <!-- fourth card -->
-              <div class="col-md-3">
-                <div class="card p-0 shadow-sm bg-white rounded">
-                  <img src="./assets/leblon.jpeg" class="card-img-top" alt="..." style="height: 150px;">
-                  <div class="card-body">
-                    <h5 class="card-title">Leblon</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                      card's content.</p>
-                    <a href="#" class="btn btn-primary">Comprar</a>
-                  </div>
-                </div>
-              </div>
-            </div>
+  <div class="container my-5 swiper">
+    <div class="slide-content">
+      <div class="card-wrapper swiper-wrapper">
+        <div class="card swiper-slide" style="width: 18rem;">
+          <img src="./assets/angra.jpeg" class="card-img-top">
+          <div class="card-body">
+            <h5 class="card-title">Angra dos Reis</h5>
+            <p class="card-text">Datas Disponíveis</p>
+            <p class="card-text">Passeio Turístico</p>
+            <p class="card-text">Em até 10x de R$ 20,00</p>
+            <a id="buy" href="#" class="btn btn-primary" style="font-weight: bold;">Comprar</a>
           </div>
-        </div> <!-- carousel-item active -->
-        <div class="carousel-item">
-          <div class="card p-0 shadow-sm bg-white rounded">
-            <img src="./assets/recreio.jpg" class="card-img-top" alt="..." style="height: 150px;">
-            <div class="card-body">
-              <h5 class="card-title">Recreio dos Bandeirantes</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-              <a href="#" class="btn btn-primary">Comprar</a>
-            </div>
+        </div>
+        <div class="card swiper-slide" style="width: 18rem;">
+          <img src="./assets/angra.jpeg" class="card-img-top">
+          <div class="card-body">
+            <h5 class="card-title">Angra dos Reis</h5>
+            <p class="card-text">Datas Disponíveis</p>
+            <p class="card-text">Passeio Turístico</p>
+            <p class="card-text">Em até 10x de R$ 20,00</p>
+            <a id="buy" href="#" class="btn btn-primary" style="font-weight: bold;">Comprar</a>
           </div>
-        </div> <!-- carousel-item -->
+        </div>
+        <div class="card swiper-slide" style="width: 18rem;">
+          <img src="./assets/angra.jpeg" class="card-img-top">
+          <div class="card-body">
+            <h5 class="card-title">Angra dos Reis</h5>
+            <p class="card-text">Datas Disponíveis</p>
+            <p class="card-text">Passeio Turístico</p>
+            <p class="card-text">Em até 10x de R$ 20,00</p>
+            <a id="buy" href="#" class="btn btn-primary" style="font-weight: bold;">Comprar</a>
+          </div>
+        </div>
+        <div class="card swiper-slide" style="width: 18rem;">
+          <img src="./assets/angra.jpeg" class="card-img-top">
+          <div class="card-body">
+            <h5 class="card-title">Angra dos Reis</h5>
+            <p class="card-text">Datas Disponíveis</p>
+            <p class="card-text">Passeio Turístico</p>
+            <p class="card-text">Em até 10x de R$ 20,00</p>
+            <a id="buy" href="#" class="btn btn-primary" style="font-weight: bold;">Comprar</a>
+          </div>
+        </div>
+        <div class="card swiper-slide" style="width: 18rem;">
+          <img src="./assets/angra.jpeg" class="card-img-top">
+          <div class="card-body">
+            <h5 class="card-title">Angra dos Reis</h5>
+            <p class="card-text">Datas Disponíveis</p>
+            <p class="card-text">Passeio Turístico</p>
+            <p class="card-text">Em até 10x de R$ 20,00</p>
+            <a id="buy" href="#" class="btn btn-primary" style="font-weight: bold;">Comprar</a>
+          </div>
+        </div>
       </div>
-      <!-- return button -->
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <!-- advance button -->
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
     </div>
+    <div class="swiper-pagination"></div>
   </div>
+  <!-- Swiper -->
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <script src="scripts.js"></script>
 </body>
-
+<!-- JQuery -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+<!-- Bootstrap -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
