--- a/index.html
+++ b/index.html
@@ -54,51 +54,54 @@
         <div class="card swiper-slide" style="width: 18rem;">
           <img src="./assets/angra.jpeg" class="card-img-top">
           <div class="card-body">
-            <h5 class="card-title">Angra dos Reis</h5>
-            <p class="card-text">Datas Disponíveis</p>
-            <p class="card-text">Passeio Turístico</p>
-            <p class="card-text">Em até 10x de R$ 20,00</p>
-            <a id="buy" href="#" class="btn btn-primary" style="font-weight: bold;">Comprar</a>
+            <h5 class="card-title">Angra dos Reis</h5>  
+            <p class="card-text"><i class="fa-solid fa-calendar-check"></i> Datas Disponíveis</p>
+            <p class="card-text"><i class="fa-solid fa-bus"></i> Passeio Turístico</p>
+            <p class="card-text"><i class="fa-solid fa-credit-card"></i> Em até 10x de R$ 20,00</p>
+            <h4 class="card-text">R$ 200,00</h4>
+
           </div>
         </div>
         <div class="card swiper-slide" style="width: 18rem;">
           <img src="./assets/angra.jpeg" class="card-img-top">
           <div class="card-body">
             <h5 class="card-title">Angra dos Reis</h5>
-            <p class="card-text">Datas Disponíveis</p>
-            <p class="card-text">Passeio Turístico</p>
-            <p class="card-text">Em até 10x de R$ 20,00</p>
-            <a id="buy" href="#" class="btn btn-primary" style="font-weight: bold;">Comprar</a>
+            <p class="card-text"><i class="fa-solid fa-calendar-check"></i> Datas Disponíveis</p>
+            <p class="card-text"><i class="fa-solid fa-bus"></i> Passeio Turístico</p>
+            <p class="card-text"><i class="fa-solid fa-credit-card"></i> Em até 10x de R$ 20,00</p>
+            <h4 class="card-text">R$ 200,00</h4>
+
           </div>
         </div>
         <div class="card swiper-slide" style="width: 18rem;">
           <img src="./assets/angra.jpeg" class="card-img-top">
           <div class="card-body">
             <h5 class="card-title">Angra dos Reis</h5>
-            <p class="card-text">Datas Disponíveis</p>
-            <p class="card-text">Passeio Turístico</p>
-            <p class="card-text">Em até 10x de R$ 20,00</p>
-            <a id="buy" href="#" class="btn btn-primary" style="font-weight: bold;">Comprar</a>
+            <p class="card-text"><i class="fa-solid fa-calendar-check"></i> Datas Disponíveis</p>
+            <p class="card-text"><i class="fa-solid fa-bus"></i> Passeio Turístico</p>
+            <p class="card-text"><i class="fa-solid fa-credit-card"></i> Em até 10x de R$ 20,00</p>
+            <h4 class="card-text">R$ 200,00</h4>
           </div>
         </div>
         <div class="card swiper-slide" style="width: 18rem;">
           <img src="./assets/angra.jpeg" class="card-img-top">
           <div class="card-body">
             <h5 class="card-title">Angra dos Reis</h5>
-            <p class="card-text">Datas Disponíveis</p>
-            <p class="card-text">Passeio Turístico</p>
-            <p class="card-text">Em até 10x de R$ 20,00</p>
-            <a id="buy" href="#" class="btn btn-primary" style="font-weight: bold;">Comprar</a>
+            <p class="card-text"><i class="fa-solid fa-calendar-check"></i> Datas Disponíveis</p>
+            <p class="card-text"><i class="fa-solid fa-bus"></i> Passeio Turístico</p>
+            <p class="card-text"><i class="fa-solid fa-credit-card"></i> Em até 10x de R$ 20,00</p>
+            <h4 class="card-text">R$ 200,00</h4>
+
           </div>
         </div>
         <div class="card swiper-slide" style="width: 18rem;">
           <img src="./assets/angra.jpeg" class="card-img-top">
           <div class="card-body">
             <h5 class="card-title">Angra dos Reis</h5>
-            <p class="card-text">Datas Disponíveis</p>
-            <p class="card-text">Passeio Turístico</p>
-            <p class="card-text">Em até 10x de R$ 20,00</p>
-            <a id="buy" href="#" class="btn btn-primary" style="font-weight: bold;">Comprar</a>
+            <p class="card-text"><i class="fa-solid fa-calendar-check"></i> Datas Disponíveis</p>
+            <p class="card-text"><i class="fa-solid fa-bus"></i> Passeio Turístico</p>
+            <p class="card-text"><i class="fa-solid fa-credit-card"></i> Em até 10x de R$ 20,00</p>
+            <h4 class="card-text">R$ 200,00</h4>
           </div>
         </div>
       </div>
@@ -113,4 +116,7 @@
 <!-- Bootstrap -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<!-- Font Awesome -->
+<script src="https://kit.fontawesome.com/64d05ef07a.js" crossorigin="anonymous"></script>
+
 </html>
