--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
           </div>
         </div>
         <div class="card swiper-slide" style="width: 18rem;">
-          <img src="./assets/angra.jpeg" class="card-img-top">
+          <img src="./assets/arrail.jpeg" class="card-img-top">
           <div class="card-body">
-            <h5 class="card-title">Angra dos Reis</h5>
+            <h5 class="card-title">Arrail do Cabo</h5>
             <p class="card-text"><i class="fa-solid fa-calendar-check"></i> Datas Disponíveis</p>
             <p class="card-text"><i class="fa-solid fa-bus"></i> Passeio Turístico</p>
             <p class="card-text"><i class="fa-solid fa-credit-card"></i> Em até 10x de R$ 20,00</p>
@@ -74,9 +74,9 @@
           </div>
         </div>
         <div class="card swiper-slide" style="width: 18rem;">
-          <img src="./assets/angra.jpeg" class="card-img-top">
+          <img src="./assets/tijuca.jpeg" class="card-img-top">
           <div class="card-body">
-            <h5 class="card-title">Angra dos Reis</h5>
+            <h5 class="card-title">Tijuca</h5>
             <p class="card-text"><i class="fa-solid fa-calendar-check"></i> Datas Disponíveis</p>
             <p class="card-text"><i class="fa-solid fa-bus"></i> Passeio Turístico</p>
             <p class="card-text"><i class="fa-solid fa-credit-card"></i> Em até 10x de R$ 20,00</p>
@@ -84,9 +84,9 @@
           </div>
         </div>
         <div class="card swiper-slide" style="width: 18rem;">
-          <img src="./assets/angra.jpeg" class="card-img-top">
+          <img src="./assets/leblon.jpeg" class="card-img-top">
           <div class="card-body">
-            <h5 class="card-title">Angra dos Reis</h5>
+            <h5 class="card-title">Leblon</h5>
             <p class="card-text"><i class="fa-solid fa-calendar-check"></i> Datas Disponíveis</p>
             <p class="card-text"><i class="fa-solid fa-bus"></i> Passeio Turístico</p>
             <p class="card-text"><i class="fa-solid fa-credit-card"></i> Em até 10x de R$ 20,00</p>
@@ -95,9 +95,9 @@
           </div>
         </div>
         <div class="card swiper-slide" style="width: 18rem;">
-          <img src="./assets/angra.jpeg" class="card-img-top">
+          <img src="./assets/recreio.jpg" class="card-img-top">
           <div class="card-body">
-            <h5 class="card-title">Angra dos Reis</h5>
+            <h5 class="card-title">Recreio dos Bandeirantes</h5>
             <p class="card-text"><i class="fa-solid fa-calendar-check"></i> Datas Disponíveis</p>
             <p class="card-text"><i class="fa-solid fa-bus"></i> Passeio Turístico</p>
             <p class="card-text"><i class="fa-solid fa-credit-card"></i> Em até 10x de R$ 20,00</p>
